--- a/css/css.css
+++ b/css/css.css
@@ -394,7 +394,7 @@ clear: both ;
 .btn{
   width: 100%;
   height: 410px;
-  background: url(file:///D:/Front-end/RWD/img/header_desktop_768.png);
+  background: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/header_desktop_768.png?raw=true);
   background-repeat: no-repeat;
   position: absolute;
 }
@@ -406,7 +406,7 @@ clear: both ;
 
   width: 100%;
   height: auto;
-  background: url(file:///D:/Front-end/RWD/img/header_mobile.png);
+  background: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/header_mobile.png?raw=true);
   background-repeat: no-repeat;
   position: absolute;
 
@@ -634,7 +634,7 @@ margin-left: 512px;
 
 
 .cheif{
-  background-image: url(file:///D:/Front-end/RWD/img/main_chef_brown.png);
+  background-image: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/main_chef_brown.png?raw=true);
   position: absolute;
   width: 470px;
   height: 460px;
@@ -1226,7 +1226,7 @@ color: #3D1101;
   text-indent:-999999px;
   width:245px;
   height:49px;
-  background:url(file:///D:/Front-end/RWD/img/logo_l.png) no-repeat;
+  background:url(https://github.com/corly74/RWD-Hamberger/blob/master/img/logo_l.png?raw=true) no-repeat;
 
 }
 
