--- a/css/css.css
+++ b/css/css.css
@@ -218,6 +218,11 @@ h4{font-size: 18px;}
 
 body{font-family:Microsoft JhengHei;}
 
+
+
+a{color:#FFFFFF;}
+
+
 .wrap { max-width: 1024px;
 
        margin: 0 auto;}
@@ -225,7 +230,9 @@ body{font-family:Microsoft JhengHei;}
 .header{width: 100%;
         height: 50px;
         background-color:#000000;
-        position: relative;}
+        position: relative;
+         position: sticky;
+        top: 0px;}
 
 
 @media (max-width: 768px)
@@ -249,7 +256,7 @@ body{font-family:Microsoft JhengHei;}
   width:250px;
   text-indent:-99999px;
   height:48px;
-  background:url(https://github.com/corly74/RWD-Hamberger/blob/master/img/logo_w.png?raw=true) no-repeat;
+  background:url(file:///D:/Front-end/RWD/img/logo_w.png) no-repeat;
 
 }
 
@@ -268,7 +275,7 @@ body{font-family:Microsoft JhengHei;}
 .logo a {
 width:125px;
  height:24px; 
-background:url(https://github.com/corly74/RWD-Hamberger/blob/master/img/logo_l_120.png?raw=true) no-repeat;
+background:url(file:///D:/Front-end/RWD/img/logo_l_120.png) no-repeat;
 }
   
 }
@@ -277,6 +284,14 @@ background:url(https://github.com/corly74/RWD-Hamberger/blob/master/img/logo_l_1
 .menu {float: right;
 margin-right: 48px;
 margin-top: 16px;
+}
+
+.menu a:visited {
+  color: #FFBB00;
+}
+
+.menu a:hover {
+  color: #7744FF;
 }
 
 
@@ -384,7 +399,7 @@ clear: both ;
     color: #FFFFFF;
     width: 100%;
     height: 410px;
-    background-image: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/header_desktop_1024.png?raw=true);
+    background-image: url(file:///D:/Front-end/RWD/img/header_desktop_1024.png);
     background-repeat: no-repeat;
     position: absolute;
     }
@@ -394,7 +409,7 @@ clear: both ;
 .btn{
   width: 100%;
   height: 410px;
-  background: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/header_desktop_768.png?raw=true);
+  background: url(file:///D:/Front-end/RWD/img/header_desktop_768.png);
   background-repeat: no-repeat;
   position: absolute;
 }
@@ -406,7 +421,7 @@ clear: both ;
 
   width: 100%;
   height: auto;
-  background: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/header_mobile.png?raw=true);
+  background: url(file:///D:/Front-end/RWD/img/header_mobile.png);
   background-repeat: no-repeat;
   position: absolute;
 
@@ -514,8 +529,9 @@ text-align: center; }
 
 
 
-.hh2{text-align: center;
-padding-top: 50px;
+.hh2{
+  text-align: center;
+  padding-top: 50px;
 }
 
 .hh3{
@@ -531,7 +547,7 @@ hr{width: 40%;
 
 .content li {
 
-list-style-type:none;
+  list-style-type:none;
   width: 31.33333%;
   margin-right: 1%;
   margin-left: 1%;
@@ -573,21 +589,21 @@ list-style-type:none;
   width: 100%;
   height: 460px;
   margin-top: 400px;
- position: relative;
- z-index:1;
- left: 0;
- top: 0;
+  position: relative;
+  z-index:1;
+  left: 0;
+  top: 0;
 }
 
 
 
 .cheif_left{
-  width: 50%;
+   width: 50%;
    height: 460px;
-  background-color: #3D1101 ;
- float: left;
-  position: absolute;
-  z-index:2;
+   background-color: #3D1101 ;
+   float: left;
+   position: absolute;
+   z-index:2;
 
 }
 
@@ -634,13 +650,13 @@ margin-left: 512px;
 
 
 .cheif{
-  background-image: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/main_chef_brown.png?raw=true);
+  background-image: url(file:///D:/Front-end/RWD/img/main_chef_brown.png);
   position: absolute;
   width: 470px;
   height: 460px;
   margin-left: 42px;
   background-repeat: no-repeat;
- float: left;
+  float: left;
 
 }
 
@@ -756,6 +772,7 @@ margin-top: 10px;
 
 .story1 {
   float: right;
+  width:220px;
  
 }
 
@@ -795,7 +812,7 @@ margin-top: 10px;
 
 .story2 {
   float: right;
-  
+  width:220px;
   margin-right: 30px;
 }
 
@@ -835,7 +852,7 @@ margin-top: 10px;
 }
 .story3 {
   float: right;
-  
+  width:220px;
   margin-right: 30px;
 }
 
@@ -935,11 +952,10 @@ margin-top: 10px;
 }
 
 
-.contact_title
+.contact_title 
 {
   margin-top: 50px;
   text-align:center;
-  m
 }
 
 @media (max-width: 768px) {
@@ -1227,7 +1243,7 @@ color: #3D1101;
   text-indent:-999999px;
   width:245px;
   height:49px;
-  background:url(https://github.com/corly74/RWD-Hamberger/blob/master/img/logo_l.png?raw=true) no-repeat;
+  background:url(file:///D:/Front-end/RWD/img/logo_l.png) no-repeat;
 
 }
 
