--- a/css/css.css
+++ b/css/css.css
@@ -399,7 +399,7 @@ clear: both ;
     color: #FFFFFF;
     width: 100%;
     height: 410px;
-    background-image: url(https://github.com/corly74/RWD-Hamberger/blob/master/img/header_desktop_1024.png);
+    background-image: url(https://github.com/corly74/RWD-Hamberger-index/blob/master/img/header_desktop_1024.png?raw=true);
     background-repeat: no-repeat;
     position: absolute;
     }
