--- a/css/css.css
+++ b/css/css.css
@@ -256,7 +256,7 @@ a{color:#FFFFFF;}
   width:250px;
   text-indent:-99999px;
   height:48px;
-  background:url(file:///D:/Front-end/RWD/img/logo_w.png) no-repeat;
+  background:url(https://raw.githubusercontent.com/corly74/RWD-Hamberger-index/master/img/logo_w.png) no-repeat;
 
 }
 
